@@ -569,6 +569,13 @@ input[type="checkbox"].propertytype { width: 10px; }
 #contactlist tr > td.name { font-weight: bold; text-indent: 1.6em; -webkit-transition:background-image 500ms; -moz-transition:background-image 500ms; -o-transition:background-image 500ms;  transition:background-image 500ms; position:relative; background-position:1em .5em !important; background-repeat:no-repeat !important; }
 #contactlist tr > td a.mailto { position: absolute; float: right;  clear: none; cursor:pointer; width:16px; height:16px; margin: 2px; z-index: 200; opacity: 0.6; background-image:url('%webroot%/core/img/actions/mail.svg'); }
 #contactlist tr > td a.mailto:hover { opacity: 0.8; }
+#contactlist tbody > tr > td a.delete {
+	position: absolute;
+	right: 20px; clear: none;
+	cursor:pointer;
+	width:16px; height:16px;
+	z-index: 200;
+}
 #contactlist.dim { background-image: #ddd; opacity: .50;filter:Alpha(Opacity=50); }
 
 #contact { 
