@@ -1,7 +1,9 @@
 ownCloud Contacts Changelog
 
 5.0.7:
+ - Feature: Delete button for single contacts in list. contacts#101
  - Improvement: Cut ~40% off of initial rendering time.
+ - Fix: Drag item only worked on first drag. contacts#33
  - Fix: The internal client side value for BDAY was malformed after adding a birthday. contacts#104
  - Fix: URL and EMAIL event handlers reenabled: contacts#109
  - Fix: Send correct lastModified. contacts#48 contacts#99
